package com.example;

/**
 * 12/set/2022
 * @author andrebronca
 */
public class Code {
  
  private String code;

  public String getCode() {
    return code;
  }

  public void setCode(String code) {
    this.code = code;
  }
  
}
