package com.example;

/**
 * 12/set/2022
 * @author andrebronca
 */
public interface Platform {
  public void execute(Code code);
}
